[gd_scene load_steps=12 format=3 uid="uid://hieaksw87dko"]

[ext_resource type="Texture2D" uid="uid://bel7dpeavquh3" path="res://Art/16x16 Pixel Art Roguelike (Village) Pack/hanged_skeletons.png" id="1_nl448"]
[ext_resource type="Script" path="res://Rooms/Furniture and Traps/gallows/hanged_skeleton.gd" id="2_i4jom"]
[ext_resource type="Script" path="res://Components/LifeComponent.gd" id="3_xn1fo"]
[ext_resource type="Script" path="res://Characters/HurtBox.gd" id="4_040d0"]
[ext_resource type="Script" path="res://Components/spawn_fragments_on_died.gd" id="5_5rscq"]
[ext_resource type="PackedScene" uid="uid://byaun5wu16bub" path="res://effects/fragments/skeleton_fragment.tscn" id="6_irxq5"]

[sub_resource type="Animation" id="Animation_xfmme"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_chbj0"]
resource_name = "swing"
length = 0.6
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f76oq"]
_data = {
"RESET": SubResource("Animation_xfmme"),
"swing": SubResource("Animation_chbj0")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_1xc2j"]
radius = 3.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dhcek"]
radius = 6.0
height = 16.0

[node name="HangedSkeleton" type="Node2D"]
position = Vector2(3, -18)
script = ExtResource("2_i4jom")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_nl448")
hframes = 4
vframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_f76oq")
}

[node name="CharacterDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterDetector"]
position = Vector2(0, 18)
shape = SubResource("CircleShape2D_1xc2j")

[node name="LifeComponent" type="Node" parent="."]
script = ExtResource("3_xn1fo")
body_type = 2
max_hp = 1
hp = 1

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 6
collision_mask = 0
script = ExtResource("4_040d0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, 13)
shape = SubResource("CapsuleShape2D_dhcek")

[node name="SpawnFragmentsOnDied" type="Node2D" parent="."]
position = Vector2(0, 2)
script = ExtResource("5_5rscq")
fragment_scene = ExtResource("6_irxq5")
max_fragments = 6
